# ShoppingList

./: .gitignore  .hlint.yaml  .stylish-haskell.yaml  LICENSE  README.md  ShoppingList.cabal  config.yaml  defaultConfig.yaml  defaultDB.db  stack.yaml  style.css
app/: AppConfig.hs  Database.hs  Item.hs  Localisation.hs  Main.hs  MainApp.hs  WebApp.hs  WebApp.hs-boot  WebServer.hs
app/AppConfig/: Loader.hs  Resource.hs
app/Config/: AppConfig.hs  Loader.hs  Resource.hs
app/Database/: Initialiser.hs  Resource.hs  WebApp.hs
app/Localisation/: WebApp.hs
app/WebApp/: AddApp.hs  AddR.hs  AddR.hs-boot  EditApp.hs  EditR.hs  EditR.hs-boot  HomeR.hs  HomeR.hs-boot  MainApp.hs  ManageApp.hs  ManageR.hs  ManageR.hs-boot  ModifyApp.hs  ModifyR.hs  ModifyR.hs-boot  OrderOptionUpdateR.hs  OrderOptionUpdateR.hs-boot  SettingUpdateR.hs  SettingUpdateR.hs-boot  StyleSheet.hs
app/WebApps/: MainApp.hs
app/WebServer/: Resource.hs  WebServer.hs
src/Data/Text/: Extra.hs  TRead.hs
