cabal-version: 2.2

name:           ShoppingList
version:        1.0.0.0
description:    Please see the README on GitHub at <https://github.com/t-sasaki915/ShoppingList#readme>
homepage:       https://github.com/t-sasaki915/ShoppingList#readme
bug-reports:    https://github.com/t-sasaki915/ShoppingList/issues
author:         Toma Sasaki
maintainer:     netst915@gmail.com
copyright:      2025 Toma Sasaki
license:        MIT
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/t-sasaki915/ShoppingList

library
  exposed-modules:
        Data.Text.TRead
  other-modules:
      Paths_ShoppingList
  autogen-modules:
      Paths_ShoppingList
  hs-source-dirs:
      src
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
  build-depends:
      base >=4.7 && <5
    , text == 2.0.2
  default-language: Haskell2010
  default-extensions: LambdaCase

executable ShoppingList-exe
  main-is: Main.hs
  other-modules:
      Paths_ShoppingList
      AppConfig.Loader
      AppConfig.Resource
      Database.Initialiser
      Database.Resource
      WebApp.AddApp
      WebApp.MainApp
      WebApp.ManageApp
      WebApp.ModifyApp
      WebServer.Resource
      AppConfig
      Database
      Item
      Localisation
      WebApp
      WebServer
  autogen-modules:
      Paths_ShoppingList
  hs-source-dirs:
      app
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      ShoppingList
    , base >=4.7 && <5
    , wai ==3.2.4
    , wai-util ==0.8
    , warp ==3.3.31
    , http-types ==0.12.4
    , file-embed ==0.0.16.0
    , yaml ==0.11.11.2
    , bytestring ==0.11.5.3
    , directory ==1.3.7.1
    , lucid ==2.11.20230408
    , text ==2.0.2
    , sqlite-simple ==0.4.19.0
    , containers ==0.6.7
    , network-uri ==2.6.4.2
    , uri-encode ==1.5.0.7
  default-language: Haskell2010
  default-extensions: LambdaCase, OverloadedStrings
